<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app_name">Sibirskie Seti</string>
    <string name="action_settings">Settings</string>
    <string name="button_login_text">Log in</string>
    <string name="title_activity_login">Sibirskie Seti</string>
    <string name="hint_name">username</string>
    <string name="hint_pass">password</string>
    <string name="title_activity_main">Personal Cabinet</string>
    <string name="login_failed">Login failed</string>
    <string name="current_balance">Your current balance</string>
    <string name="wallet_image">Wallet image</string>
    <string name="current_plan">Your current plan</string>
    <string name="charge_rate">Your charge rate</string>
    <string name="show_last_charges">Show last charges</string>
    <string name="take_loan">Take loan</string>
    <string name="company_logo">Company logo</string>
    <string name="phone">8-800-250-0211</string>
    <string name="login_welcome">Sibirskie Seti\nPlease log in</string>

    <string name="balance">
        <xliff:g id="s">%s</xliff:g> R.
    </string>
    <string name="parsing_error">Error parsing server response</string>
    <string name="please_wait">Please wait</string>
    <string name="title_activity_loan">ActivityLoan</string>
    <string name="open_loan_failed">Error showing loan options</string>
    <string name="open_loan_success">The loan is taken</string>
    <string name="expiration_date">The loan will expire on</string>
    <string name="get_loan">Get loan</string>
    <string name="choose_sum">Choose the sum to loan</string>
    <string name="empty_sum">...</string>
    <string name="dialog_sum_title">Choose sum</string>
    <string name="loan_taken">The loan is already taken</string>
    <string name="title_activity_detail">Details</string>
    <string name="details">Details:</string>
    <string name="open_details_failed">Failed opening details</string>
    <string name="site_payment">Payment Web page</string>

</resources>
