<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FragmentLogin"
    tools:showIn="@layout/activity_login">

    <EditText
        android:id="@+id/edit_name"
        android:singleLine="true"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_pass"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/hint_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_login"
        android:text="@string/button_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
